--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,15 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
-        "fideloper/proxy": "~3.3",
+        "fabpot/goutte": "^3.2@dev",
+        "irazasyed/telegram-bot-sdk": "^3.0",
         "laravel/framework": "5.5.*",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "propaganistas/laravel-intl": "dev-master"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
+        "friendsofphp/php-cs-fixer": "^2.9@dev",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "~1.0",
         "phpunit/phpunit": "~6.0"
