--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,11 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
-        "fabpot/goutte": "^3.2@dev",
+        "fabpot/goutte": "^3.2",
         "irazasyed/telegram-bot-sdk": "^3.0",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
-        "propaganistas/laravel-intl": "dev-master",
-        "webpatser/laravel-uuid": "dev-master"
+        "propaganistas/laravel-intl": "^1.2"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
