--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,9 @@
         "propaganistas/laravel-intl": "^1.2"
     },
     "require-dev": {
+        "codedungeon/phpunit-result-printer": "^0.4.4",
         "filp/whoops": "~2.0",
-        "friendsofphp/php-cs-fixer": "^2.9@dev",
+        "friendsofphp/php-cs-fixer": "^2.9",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "~1.0",
         "phpunit/phpunit": "~6.0"
